@@ -133,6 +133,10 @@ used.
      manual files when a manual page is read.  This flag suppresses this
      behaviour.
 
+--disable-manual
+     Don't build or install the man-db manual.  This may be useful when
+     cross-compiling, or to reduce the installation size.
+
 
 INSTALL
 =======
