@@ -43,6 +43,7 @@ MAN_ARG_OVERRIDE_DIR
 MAN_ARG_SYSTEMDTMPFILESDIR
 MAN_ARG_SYSTEMDSYSTEMUNITDIR
 MAN_ARG_MANDIRS
+MAN_ARG_MANUAL
 
 # Check $PATH for the following programs and append suitable options.
 AC_PROG_CC
