@@ -315,6 +315,9 @@ Normally,
 will automatically try to create cat files corresponding to manual files
 when a manual page is read.
 This flag suppresses this behaviour.
+.ip \-\-disable\-manual
+Don't build or install the \*M manual.
+This may be useful when cross-compiling, or to reduce the installation size.
 .if r MAN-OPTIONS-ONLY \{
 .lp
 MAN\-OPTIONS\-END
