@@ -30,6 +30,9 @@ Major changes since man-db 2.8.5:
 	  these are more flexible and normally more concise than home-grown
 	  equivalents.
 
+	* There is a new configure option --disable-manual, which causes the
+	  man-db manual not to be built or installed.
+
 man-db 2.8.5 (5 January 2019)
 =============================
 
